classDiagram

    direction LR

    namespace EvaluationModel {

        class Scenario {
        }

        class Order {
        }
        
    }

    namespace DefinitionModel {

        class ProductType {
        }

        class MachineType {
        }

        class ToolType {
        }

        class OperationType {
        }
        
    }

    namespace SolutionModel {

        class Layout {
        }

        class Corridor {
        }

        class Machine {
        }
        
    }

    OperationType "1"..>"*" ProductType: consumes
    OperationType "1"..>"*" ProductType: produces

    OperationType "1"..>"*" MachineType: uses

    OperationType "1"..>"*" ToolType: uses
    
    ProductType "1"<.."*" Order

    Order "*"<--o"1" Scenario

    MachineType "1"<.."*" Machine

    Machine "*"<--o"1" Corridor

    Layout "1"o-->"*" Corridor


    style OperationType fill:lightgreen,stroke:green
    style ProductType fill:lightgreen,stroke:green
    style ToolType fill:lightgreen,stroke:green
    style MachineType fill:lightgreen,stroke:green

    style Scenario fill:pink,stroke:red
    style Order fill:pink,stroke:red

    style Layout fill:lightblue,stroke:blue
    style Corridor fill:lightblue,stroke:blue
    style Machine fill:lightblue,stroke:blue